compiler/weave_syntax/tests/data/syntax/declarations/extend-0001.error
error: Expected '[token:identifier]'
        --> <source>:23:9
         |
      23 |         );
         |         ^
error: Expected '[token:identifier]'
        --> <source>:41:9
         |
      41 |         );
         |         ^
